[gd_scene load_steps=51 format=3 uid="uid://c0c88735synyl"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ng86c"]
[ext_resource type="Texture2D" uid="uid://cgor4t4n8kuow" path="res://Assets/Character/Jump2.png" id="2_jursn"]
[ext_resource type="Texture2D" uid="uid://bjndxptsw6x7p" path="res://Assets/Character/Idle1.png" id="2_qjb0h"]
[ext_resource type="Texture2D" uid="uid://bxi2fm8cuw11v" path="res://Assets/Character/Dash.png" id="2_vipg6"]
[ext_resource type="Texture2D" uid="uid://bu4gmkiaflcsy" path="res://Assets/Character/Cyborg_hurt.png" id="3_658a4"]
[ext_resource type="Texture2D" uid="uid://yrnrk31v4irp" path="res://Assets/Character/Cyborg_death.png" id="3_ppcox"]
[ext_resource type="Script" path="res://Scenes/Player/state_machine.gd" id="3_vved1"]
[ext_resource type="Script" path="res://Scenes/Player/move.gd" id="4_ys83l"]
[ext_resource type="Script" path="res://Scenes/Player/idle.gd" id="5_coukq"]
[ext_resource type="Texture2D" uid="uid://dmbru1vc8amkp" path="res://Assets/Character/Gun.png" id="5_px1x7"]
[ext_resource type="Script" path="res://Scenes/Player/jump.gd" id="5_t0otw"]
[ext_resource type="Texture2D" uid="uid://31kr27ihmeb6" path="res://Assets/Character/Jump1.png" id="5_vnpcs"]
[ext_resource type="Script" path="res://Scenes/Player/gun.gd" id="6_8p7cf"]
[ext_resource type="Texture2D" uid="uid://da7k7r4muv8e1" path="res://Assets/Character/Run1.png" id="6_v4t1c"]
[ext_resource type="Script" path="res://Scenes/Player/fall.gd" id="8_7yb0h"]
[ext_resource type="Script" path="res://Scenes/Player/hurt.gd" id="13_cu4re"]
[ext_resource type="Script" path="res://Scenes/Player/dash.gd" id="16_68al8"]
[ext_resource type="Script" path="res://Scenes/Player/death.gd" id="17_6yoqn"]
[ext_resource type="PackedScene" uid="uid://cdie0484mt78b" path="res://Scenes/Other/health_bar.tscn" id="17_f75ar"]
[ext_resource type="Script" path="res://Scenes/Player/dashtimer.gd" id="19_bsad5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2jo1o"]
atlas = ExtResource("2_vipg6")
region = Rect2(48, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qwhp"]
atlas = ExtResource("2_vipg6")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2y2y"]
atlas = ExtResource("2_vipg6")
region = Rect2(144, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_81bsq"]
atlas = ExtResource("3_ppcox")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qmcv"]
atlas = ExtResource("3_ppcox")
region = Rect2(48, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnl7q"]
atlas = ExtResource("3_ppcox")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ki0"]
atlas = ExtResource("3_ppcox")
region = Rect2(144, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbp1u"]
atlas = ExtResource("3_ppcox")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7vjl"]
atlas = ExtResource("3_ppcox")
region = Rect2(240, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivp5q"]
atlas = ExtResource("2_jursn")
region = Rect2(144, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_56qvy"]
atlas = ExtResource("3_658a4")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_imnxp"]
atlas = ExtResource("3_658a4")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiejs"]
atlas = ExtResource("2_qjb0h")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c31er"]
atlas = ExtResource("2_qjb0h")
region = Rect2(48, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_326j0"]
atlas = ExtResource("2_qjb0h")
region = Rect2(96, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7x2w"]
atlas = ExtResource("2_qjb0h")
region = Rect2(144, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n4y7"]
atlas = ExtResource("5_vnpcs")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omhv6"]
atlas = ExtResource("6_v4t1c")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4l4s"]
atlas = ExtResource("6_v4t1c")
region = Rect2(48, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b660r"]
atlas = ExtResource("6_v4t1c")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly8gk"]
atlas = ExtResource("6_v4t1c")
region = Rect2(144, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_anrjw"]
atlas = ExtResource("6_v4t1c")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi1ec"]
atlas = ExtResource("6_v4t1c")
region = Rect2(240, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ledj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jo1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qwhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2y2y")
}],
"loop": true,
"name": &"dash",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81bsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qmcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnl7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ki0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbp1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7vjl")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivp5q")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56qvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imnxp")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiejs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c31er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_326j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7x2w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n4y7")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omhv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4l4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b660r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly8gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anrjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi1ec")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7rjs2"]
radius = 6.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_85ksc"]
atlas = ExtResource("5_px1x7")
region = Rect2(0, 0, 26, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_nupkb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85ksc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jcq4"]
bg_color = Color(0.826704, 0.40573, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8b3s"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cd3hg"]
font_size = 100

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("hurt_state", "death_state") groups=["Player"]]
script = ExtResource("1_ng86c")
hurt_state = NodePath("state_machine/hurt")
death_state = NodePath("state_machine/death")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1, -105)

[node name="animations" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -24)
sprite_frames = SubResource("SpriteFrames_5ledj")
animation = &"death"

[node name="collision" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_7rjs2")

[node name="gun" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("hurt_state")]
position = Vector2(-3, -16)
rotation = -6.28319
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_nupkb")
offset = Vector2(6.465, 0)
script = ExtResource("6_8p7cf")
hurt_state = NodePath("../state_machine/hurt")

[node name="Marker2D" type="Marker2D" parent="gun"]
position = Vector2(18.75, -1.25)
scale = Vector2(1.25, 1.25)

[node name="Timer" type="Timer" parent="gun"]
wait_time = 0.2
one_shot = true
autostart = true

[node name="ReloadTimer" type="Timer" parent="gun"]
wait_time = 1.5
one_shot = true

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_vved1")
starting_state = NodePath("fall")

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "dash_state")]
script = ExtResource("4_ys83l")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
dash_state = NodePath("../dash")
animation_name = "walk"
move_speed = 200.0

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state")]
script = ExtResource("5_t0otw")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
animation_name = "jump"
move_speed = 200.0

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("jump_state", "idle_state", "move_state")]
script = ExtResource("8_7yb0h")
jump_state = NodePath("../jump")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
animation_name = "fall"
move_speed = 200.0

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "dash_state")]
script = ExtResource("5_coukq")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
dash_state = NodePath("../dash")
animation_name = "idle"
move_speed = 200.0

[node name="hurt" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state")]
script = ExtResource("13_cu4re")
move_state = NodePath("../move")
animation_name = "hurt"

[node name="Timer" type="Timer" parent="state_machine/hurt"]
wait_time = 0.5

[node name="dash" type="Node" parent="state_machine" node_paths=PackedStringArray("move_state")]
script = ExtResource("16_68al8")
move_state = NodePath("../move")
animation_name = "dash"
move_speed = 500.0

[node name="Timer" type="Timer" parent="state_machine/dash"]
wait_time = 0.3

[node name="death" type="Node" parent="state_machine"]
script = ExtResource("17_6yoqn")
animation_name = "death"

[node name="Timer" type="Timer" parent="state_machine/death"]
one_shot = true

[node name="Invinsibility" type="Timer" parent="."]
wait_time = 0.7

[node name="Dash" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource("19_bsad5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Ammo" type="ProgressBar" parent="CanvasLayer"]
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false

[node name="Dash" type="ProgressBar" parent="CanvasLayer"]
offset_left = 15.0
offset_top = 42.0
offset_right = 159.0
offset_bottom = 69.0
theme_override_styles/background = SubResource("StyleBoxFlat_2jcq4")
theme_override_styles/fill = SubResource("StyleBoxFlat_n8b3s")
show_percentage = false

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("17_f75ar")]
offset_left = 16.0
offset_top = 12.0
offset_right = 244.0
offset_bottom = 35.0

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 312.0
offset_top = 254.0
offset_right = 864.0
offset_bottom = 391.0
text = "YOU WIN!!!!"
label_settings = SubResource("LabelSettings_cd3hg")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="gun/Timer" to="gun" method="_on_timer_timeout"]
[connection signal="timeout" from="gun/ReloadTimer" to="gun" method="_on_reload_timer_timeout"]
[connection signal="timeout" from="state_machine/hurt/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="state_machine/hurt/Timer" to="state_machine/hurt" method="_on_timer_timeout"]
[connection signal="timeout" from="state_machine/dash/Timer" to="state_machine/dash" method="_on_timer_timeout"]
[connection signal="timeout" from="state_machine/death/Timer" to="state_machine/death" method="_on_timer_timeout"]
[connection signal="timeout" from="Invinsibility" to="." method="_on_invinsibility_timeout"]
[connection signal="timeout" from="Dash" to="." method="_on_dash_timeout"]
